@@ -181,11 +181,42 @@ public class AbsenceEngineUtility {
     }
   }
   
-  public Integer takenBehaviouralFixes(Absence absence, Integer amount) {
+  /**
+   * la quantità corretta prendibile in percentuale.
+   * @param absence l'assenza
+   * @param amount la quantità prendibile
+   * @return la quantità corretta prendibile in percentuale.
+   */
+  public Integer takenBehaviouralFixes(Absence absence, Integer amount,
+      List<Contract> fetchedContracts, DateInterval periodInterval, 
+      TakeAmountAdjustment adjustment) {
     Optional<AbsenceTypeJustifiedBehaviour> percentageTaken = 
         absence.absenceType.getBehaviour(JustifiedBehaviourName.takenPercentageTime);
     if (percentageTaken.isPresent() && percentageTaken.get().getData() != null) {
-      return amount * percentageTaken.get().getData() / 1000;
+      final int Max_Minutes_To_Cut_Back = 360;
+      boolean workTimeAdjustment = adjustment.workTime;
+
+      for (Contract contract : fetchedContracts) {
+        if (DateUtility.intervalIntersection(contract.periodInterval(), periodInterval) == null) {
+          continue;
+        }
+        for (ContractWorkingTimeType cwtt : contract.getContractWorkingTimeTypeOrderedList()) {
+          if (DateUtility.intervalIntersection(cwtt.periodInterval(), periodInterval) == null) {
+            continue;
+          }          
+          
+          if (workTimeAdjustment && cwtt.workingTimeType.enableAdjustmentForQuantity) {
+            //Adeguamento sull'incidenza del tipo orario
+            if (cwtt.getWorkingTimeType().averageMinutesInWeek() >= Max_Minutes_To_Cut_Back) {
+              return Max_Minutes_To_Cut_Back;
+            }
+            return cwtt.getWorkingTimeType().averageMinutesInWeek();
+          }          
+          
+        }
+      }
+      //return amount * percentageTaken.get().getData() / 1000;
+      
     }
     return amount;
   }
@@ -518,7 +549,7 @@ public class AbsenceEngineUtility {
       }  
     }
         
-    Double totalAssigned = new Double(0);
+    Double totalAssigned = Double.valueOf(0);
     
     //Ricerca dei periodi di attività
     for (Contract contract : contracts) {
@@ -538,7 +569,7 @@ public class AbsenceEngineUtility {
         int cwttDays = DateUtility.daysInInterval(cwttInverval);
 
         //Incidenza cwtt sul periodo totale (in giorni)
-        Double cwttPercent = ((double)cwttDays * 100) / periodDays; // (*)
+        Double cwttPercent = ((double) cwttDays * 100) / periodDays; // (*)
         
         //Adeguamento sull'incidenza del periodo
         Double cwttAssigned = (cwttPercent * fixed) / 100;
